pod-security/baseline/restrict-apparmor-profiles/.chainsaw-test/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-debug-pod
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
