pod-security/baseline/restrict-apparmor-profiles/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    oof.org.io/foo: bar
    container.apparmor.security.beta.kubernetes.io/busybox01: runtime/default
  name: goodpod01-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox01: localhost/foo
    oof.org.io/foo: bar
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-native-pod
spec:
  securityContext:
    appArmorProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-native-container
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: foo
