pod-security/baseline/restrict-apparmor-profiles/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        oof.org.io/foo: bar
        container.apparmor.security.beta.kubernetes.io/busybox01: foo
    spec:
      containers:
      - name: busybox01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01-new
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            oof.org.io/foo: bar
            container.apparmor.security.beta.kubernetes.io/busybox01: bar
        spec:
          restartPolicy: Never
          containers:
          - name: busybox01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: unconfined
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: unconfined
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-native-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        appArmorProfile:
          type: Unconfined
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-native-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          appArmorProfile:
            type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob-native-pod
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          securityContext:
            appArmorProfile:
              type: Unconfined
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob-native-container
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              appArmorProfile:
                type: Unconfined
