pod-security/baseline/restrict-apparmor-profiles/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-apparmor-profiles
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-apparmor-profiles.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-apparmor-profiles
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontroller-bad.yaml
  - name: step-03
    try:
    - apply:
        file: debug-pod.yaml
    - wait:
        apiVersion: v1
        kind: Pod
        name: apparmor-debug-pod
        timeout: 1m
        for:
          condition:
            name: Ready
            value: 'true'
    - script:
        env:
        - name: NAMESPACE
          value: ($namespace)
        content: if ! kubectl debug apparmor-debug-pod -n "$NAMESPACE" --image=ghcr.io/kyverno/test-busybox:1.35 --target=busybox --profile=restricted --attach=false; then exit 1; else exit 0; fi;
    - script:
        env:
        - name: NAMESPACE
          value: ($namespace)
        content: if ! kubectl debug apparmor-debug-pod -n "$NAMESPACE" --image=ghcr.io/kyverno/test-busybox:1.35 --target=busybox --profile=restricted --custom=debug-custom-profile-allowed.yaml --attach=false; then exit 1; else exit 0; fi;
    - script:
        env:
        - name: NAMESPACE
          value: ($namespace)
        content: if kubectl debug apparmor-debug-pod -n "$NAMESPACE" --image=ghcr.io/kyverno/test-busybox:1.35 --target=busybox --profile=general --custom=debug-custom-profile-denied.yaml --attach=false; then exit 1; else exit 0; fi;
